After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 354688 - Bad capitalization in ACL dialog
Bad capitalization in ACL dialog
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File Properties Dialog
2.18.x
Other All
: Normal trivial
: ---
Assigned To: Federico Mena Quintero
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2006-09-06 20:33 UTC by binner
Modified: 2007-11-30 17:24 UTC
See Also:
GNOME target: ---
GNOME version: 2.17/2.18


Attachments
nautilus-bgo354688-fm-properties-window-capitalization.diff (1.83 KB, patch)
2007-11-29 16:28 UTC, Federico Mena Quintero
none Details | Review

Description binner 2006-09-06 20:33:44 UTC
Follow the GNOME Human Interface Guidelines 2.0, http://www.gnome.org/start/2.16/notes/C/rnusability.html shows you don't.

Other information:
Comment 1 Sergej Kotliar 2006-09-06 22:21:32 UTC
If you have any concrete suggestions, please file them as bugs, individually.
Otherwise this just seems like a bug troll...
Comment 2 binner 2006-09-07 06:34:42 UTC
I did file a concrete bug against the Nautilus file properties dialog. If you don't see the faults, the capitalization styles of the labels and the push buttons are wrong.
Comment 3 Sergej Kotliar 2006-09-07 08:11:08 UTC
Please specify, what exactly is wrong with it?
Comment 4 Teppo Turtiainen 2007-03-04 07:41:11 UTC
Closing this bug report as no further information has been provided. Please feel free to reopen this bug if you can provide the information asked for.
Thanks!
Comment 5 binner 2007-03-13 13:45:10 UTC
Is it that difficult to read your style guide? ;-)

The button should be labeled "Apply Permission to Enclosed Files" and the labels should have text like "Folder access:".
Comment 6 Teppo Turtiainen 2007-03-13 18:55:09 UTC
Confirmed with Nautilus 2.18.0.1 on Ubuntu Feisty.

The relevant HIG section is: http://developer.gnome.org/projects/gup/hig/2.0/design-text-labels.html#layout-capitalization
Comment 7 Federico Mena Quintero 2007-11-29 16:05:43 UTC
Which ACL dialog are you talking about?
Comment 8 Federico Mena Quintero 2007-11-29 16:17:30 UTC
Oh, I get it.  You only get the "apply permission to enclosed files" button if you use file properties on a folder.  The code in question is nautilus/src/file-manager/fm-properties-window.c.
Comment 9 Federico Mena Quintero 2007-11-29 16:28:06 UTC
Created attachment 99845 [details] [review]
nautilus-bgo354688-fm-properties-window-capitalization.diff
Comment 10 Federico Mena Quintero 2007-11-30 17:24:40 UTC
Committed to trunk (r13466).

2007-11-30  Federico Mena Quintero  <federico@novell.com>

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=354688 - Attack of
	the HIG police.

	* src/file-manager/fm-properties-window.c
	(create_permissions_page): Use header capitalization for command button.
	(add_permissions_combo_box): Use sentence capitalization for field labels.